compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/kt57374.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL

<!POSSIBLE_INITIALIZATION_DEADLOCK!>sealed class Base {
    companion object {
        <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val fooAccess = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>Derived.foo()<!><!>
    }
}<!>

<!POSSIBLE_INITIALIZATION_DEADLOCK!>class Derived(var value: String) : Base() {
    companion object {
        fun foo(): String = "foo"
    }
}<!>
